--- a/.github/workflows/test-base.yml
+++ b/.github/workflows/test-base.yml
@@ -11,7 +11,8 @@ jobs:
   test:
     name: Run Unit Tests
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/test.yml@main
-
+    secrets:
+      APP_REPO_TOKEN: ${{ secrets.GH2_TOKEN }}
   # ───────────────────────────────────────────────────────────
   # Job 2: Llamar al workflow reusable de merge
   # ───────────────────────────────────────────────────────────
