--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -53,12 +53,7 @@ jobs:
   # ───────────────────────────────────────────────────────────
   deploy-gks-qa:
     name: Deploy to GKS QA
-    needs: create-pr-to-integration  # ⚙️ Solo se ejecuta si el PR se crea correctamente
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/deployment-qa.yml@main  # 📂 Ruta al workflow reusable
-    #secrets:
-    #  GKS_PROJECT: ${{ secrets.GKS_PROJECT }}
-    #  GKS_CLUSTER: ${{ secrets.GKS_CLUSTER }}
+    needs: create-pr-to-integration
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/deployment-qa.yml@main
     with:
-      deploy_to_gks: true  # ⚙️ Desplegar a GKS QA
-
-   
+      deploy_to_gks: true
