--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,89 +1,79 @@
+########################################
+# 🔄 WORKFLOW REUSABLE: Date Workflow
+# Ejecuta análisis de integración y validaciones básicas.
+# Diseñado para ser invocado desde otros workflows.
+########################################
+
+name: Reusable Date Workflow
+
+# 🔧 Definir como workflow reusable
+on:
+  workflow_call:  # Permite que otros workflows lo invoquen
+    # secrets:
+    #   SONAR_TOKEN:
+    #     required: true
+    # inputs:
+    #   branch:
+    #     description: 'Rama a analizar (por defecto: qa)'
+    #     required: false
+    #     type: string
+    #     default: 'qa'
+
+# 🔐 Permisos mínimos requeridos
 permissions:
   actions: read
-  contents: write
-  pull-requests: write
+  contents: read
   security-events: write
 
-name: Run Qa Tests
-
-on:
-  push:
-    branches:
-      - integration     
-  # ───────────────────────────────────────────────────────────
-  # Job 1: Llamar al workflow reusable de tests
-  # ───────────────────────────────────────────────────────────
 jobs:
-  test:
-    name: Run Qa Tests
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/integration.yml@main
-    #with:
-    #  sonar-token: ${{ secrets.SONAR_TOKEN }}
-    #  branch: "qa"
+  # ═══════════════════════════════════════════════════════════
+  # 🔧 JOB: INTEGRATION SETUP
+  # ═══════════════════════════════════════════════════════════
+  integration:
+    name: 🧩 Setup de Integración
+    runs-on: ubuntu-latest
 
-  # ──────────────────────────────────────────────────────────
-  # Job 2: Crear  Docker Image and Push to Docker Hub
-  # ──────────────────────────────────────────────────────────
-  build-image:
-    name: Build Docker Image
-    needs: test
-    strategy:
-      matrix:
-        environment: [pre, staging, pro]  # 👈 Array de entornos
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image.yml@main
-    with:
-      docker_image: mi-aplicacion
-      dockerhub_username: dariasmoises979
-      environment: ${{ matrix.environment }}  # 👈 Usa el valor de la matriz
-    
-      # Configuración del repo externo
-      external_repo: dariasmoises979-blip/app  
-      external_repo_ref: main
-      external_repo_path: ./app-repo
-    
-      # Rutas del build
-      dockerfile_path: ./app-repo/local/Dockerfile
-      build_context: ./app-repo
-    
-    secrets:
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-      EXTERNAL_REPO_TOKEN: ${{ secrets.GH2_TOKEN }}
+    steps:
+      - name: 📦 Checkout del código
+        uses: actions/checkout@v4
 
-  # ──────────────────────────────────────────────────────────
-  # Job 2: Security Scan and Docker Image Creation
-  # ──────────────────────────────────────────────────────────
-  security:
-    name: Security Scan and Docker Image Creation
-    needs: build-image  # 👈 Espera a que se construyan las imágenes
-    strategy:
-      matrix:
-        environment: [pre, staging, pro]
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/security.yml@main
-    with:
-      image_name: "dariasmoises979/mi-aplicacion"
-      image_tag: ${{ matrix.environment }}  # 👈 Escanea cada tag
-      enable_sonar: true
-    secrets:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: 🧰 Preparar entorno
+        run: echo "Configurando entorno base para pruebas de integración..."
 
-  # ──────────────────────────────────────────────────────────
-  # Job 3: prueba uses  
-  # ──────────────────────────────────────────────────────────
-  pruebas:
-    name: Build Docker Image
-    needs: test
-    strategy:
-      matrix:
-        environment: [pre, staging, pro]  # 👈 Array de entornos
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image-hybrid.yml@main
-  
-  pruebas2:
-    name: Build 
-    needs: test
-    strategy:
-      matrix:
-        environment: [pre, staging, pro]  # 👈 Array de entornos
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/bmain-pipeline.yml@main
-  
-      
+  # ═══════════════════════════════════════════════════════════
+  # 🧩 JOB: TEST UNITARIOS
+  # ═══════════════════════════════════════════════════════════
+  test-unit:
+    name: 🧪 Unit Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 📦 Checkout del código
+        uses: actions/checkout@v4
+
+      - name: ⚙️ Configurar Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: 📥 Instalar dependencias
+        run: |
+          pip install flask pytest
+
+      - name: ▶️ Ejecutar tests unitarios
+        run: pytest -v
+
+  # ═══════════════════════════════════════════════════════════
+  # 🔗 JOB: TEST DE INTEGRACIÓN
+  # ═══════════════════════════════════════════════════════════
+  test-integration:
+    name: 🔗 Integration Tests
+    runs-on: ubuntu-latest
+    needs: test-unit
+
+    steps:
+      - name: 📦 Checkout del código
+        uses: actions/checkout@v4
+
+      - name: 🧩 Ejecutar pruebas de integración
+        run: echo "Comprueba que cada función o módulo funciona correctamente en conjunto"
