--- a/.github/workflows/03-integration_base.yml
+++ b/.github/workflows/03-integration_base.yml
@@ -411,3 +411,26 @@ jobs:
           
           echo "---" >> $GITHUB_STEP_SUMMARY
           echo "🎯 **Acción**: Revisa los artefactos de cada ambiente en la sección de Artifacts" >> $GITHUB_STEP_SUMMARY
+
+
+      
+  # ═══════════════════════════════════════════════════════════
+  # JOB 7: SAVE IMAGE INFO
+  # ═══════════════════════════════════════════════════════════
+  save-image-info:
+    name: 🧾 Save built image info
+    runs-on: ubuntu-latest
+    needs: [build-image-pre, build-image-staging, build-image-pro]
+    steps:
+      - name: Create image info file
+        run: |
+          echo "IMAGE_NAME=dariasmoises979/mi-aplicacion" > image-info.env
+          echo "TAG_PRE=pre-${{ github.run_number }}" >> image-info.env
+          echo "TAG_STAGING=staging-${{ github.run_number }}" >> image-info.env
+          echo "TAG_PRO=prod-${{ github.run_number }}" >> image-info.env
+
+      - name: Upload image info artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: image-info
+          path: image-info.env
