--- a/.github/workflows/04-base_deployment_main.yml
+++ b/.github/workflows/04-base_deployment_main.yml
@@ -6,18 +6,18 @@
 
 name: CI/CD Pipeline
 
+permissions:
+  contents: write
 on:
   push:
     branches:
       - main
-      - develop
-      - 'release/**'
   pull_request:
     branches:
       - main
-      - develop
 
-  # Permitir ejecución manual con selección de entorno
+
+    # Permitir ejecución manual con selección de entorno
   workflow_dispatch:
     inputs:
       environment:
@@ -294,3 +294,44 @@ jobs:
           echo "   ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           exit 1
+
+
+#           # .github/workflows/04-base_deployment_main.yml
+# name: Deploy Updated Images
+
+# on:
+#   workflow_run:
+#     workflows: ["Build and Push Docker Image"]
+#     types:
+#       - completed
+
+# jobs:
+#   deploy:
+#     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Download artifact from previous workflow
+#         uses: actions/download-artifact@v4
+#         with:
+#           name: image-info
+#           run-id: ${{ github.event.workflow_run.id }}
+#           path: ./data
+
+#       - name: Read image info
+#         id: read
+#         run: |
+#           source ./data/image-info.env
+#           echo "image_name=${IMAGE_NAME}" >> $GITHUB_OUTPUT
+#           echo "tag_pre=${TAG_PRE}" >> $GITHUB_OUTPUT
+#           echo "tag_staging=${TAG_STAGING}" >> $GITHUB_OUTPUT
+#           echo "tag_prod=${TAG_PRO}" >> $GITHUB_OUTPUT
+
+#       - name: Call GitOps reusable for staging
+#         uses: dariasmoises979-blip/pipeline-build/.github/workflows/deployment-gitops.yml@main
+#         with:
+#           environment: staging
+#           image_tag: ${{ steps.read.outputs.tag_staging }}
+#           dockerhub_username: dariasmoises979
+#           docker_image: ${{ steps.read.outputs.image_name }}
+#         secrets: inherit
